--- a/Instructions/Labs/M01-test/1-introduction.html
+++ b/Instructions/Labs/M01-test/1-introduction.html
@@ -1,6 +1,7 @@
+<ol>
 # مقدمة</li>
 </li>
-في هذه الوحدة، ستتعلم كيفية إنشاء مطالبات فعّالة وسياقية لـ Microsoft 365 Copilot **لتلخيص** المعلومات في تطبيقات Microsoft 365. إذا كنت تتطلع إلى تحسين مهاراتك في المطالبة في Copilot، فإن هذه الوحدة تزودك بالمعرفة والتقنيات لصياغة المطالبات التي تسفر عن نتائج دقيقة ومفيدة من Microsoft 365 Copilot.</li>
+في هذه الوحدة، ستتعلم كيفية إنشاء مطالبات فعّالة وسياقية لـ Microsoft 365 Copilot **لتلخيص** المعلومات في تطبيقات Microsoft <li>إذا كنت تتطلع إلى تحسين مهاراتك في المطالبة في Copilot، فإن هذه الوحدة تزودك بالمعرفة والتقنيات لصياغة المطالبات التي تسفر عن نتائج دقيقة ومفيدة من Microsoft 365 Copilot.</li>
 </li>
 تُركز هذه الوحدة على **تبسيط** و**تلخيص** و**فهم** و**تجميع** المعلومات باستخدام Copilot في تطبيقات Microsoft 365 مثل **Word** و**PowerPoint** و**Teams** و**Outlook** وغيرها. ستتعلم كيفية استخدام قدرات التلخيص الأساسية هذه، ولكن أيضًا كيفية صياغة مطالبة فعّالة تحتوي على جميع العناصر اللازمة لتوليد النتائج المرجوة.</li>
 </li>
@@ -9,16 +10,18 @@
 </li>
 في نهاية هذه الوحدة، ستتمكن من:</li>
 </li>
-1. تحديد العناصر الرئيسية لمطالبة فعالة وتطبيقها على المطالبات الخاصة بك.</li>
+<li>تحديد العناصر الرئيسية لمطالبة فعالة وتطبيقها على المطالبات الخاصة بك.</li>
 </li>
-1. مطالبة Copilot بتلخيص المعلومات الرئيسية أو استخراجها في مستندات Word وجداول Excel وعروض PowerPoint التقديمية.</li>
+<li>مطالبة Copilot بتلخيص المعلومات الرئيسية أو استخراجها في مستندات Word وجداول Excel وعروض PowerPoint التقديمية.</li>
 </li>
-1. تلخيص الدردشات والاجتماعات للبحث عن عناصر العمل الرئيسية باستخدام Copilot في Teams.</li>
+<li>تلخيص الدردشات والاجتماعات للبحث عن عناصر العمل الرئيسية باستخدام Copilot في Teams.</li>
 </li>
-1. مهمة Copilot في Outlook تقوم بتلخيص رسائل البريد الإلكتروني للبحث عن عناصر الإجراءات أو إشارة.</li>
+<li>مهمة Copilot في Outlook تقوم بتلخيص رسائل البريد الإلكتروني للبحث عن عناصر الإجراءات أو إشارة.</li>
 </li>
-1. تجميع المعلومات من مستندات متعددة وإنشاء ملخص مدمج باستخدام Microsoft 365.</li>
+<li>تجميع المعلومات من مستندات متعددة وإنشاء ملخص مدمج باستخدام Microsoft 365.</li>
 </li>
 ستشاهد خلال الوحدة أمثلة على مطالبات **بسيطة** تم تحسينها باستخدام تقنيات مختلفة لتصبح مطالبات **جيدة**، ثم مطالبات **أفضل**، ثم الإصدار **الأفضل** من تلك المطالبات. يساعدك تحليل المطالبات بهذه الطريقة في التعرف على إمكانيات Microsoft 365 Copilot ويعزز أهمية التقنية الجيدة في الوقت نفسه.</li>
 </li>
 إن إكمال هذه الوحدة يزودك بالمهارات اللازمة **لتعزيز الإنتاجية** من خلال توصيل التوقعات إلى Copilot بشكل فعّال، مما يوفر لك الوقت والجهد. ستتمكن أيضًا من تطوير **مهارات مطالبة محسنة** لصياغة مطالبات واضحة وموجزة، مما يعزز الإنتاجية في تطبيقات Microsoft 365.</li>
+
+</ol>
