--- a/Instructions/Labs/M01-test/1a-sample-data-copilot-microsoft-365.html
+++ b/Instructions/Labs/M01-test/1a-sample-data-copilot-microsoft-365.html
@@ -1,7 +1,7 @@
-# تدريب - تابع باستخدام بيانات العينة مع Microsoft 365 Copilot</li>
-</li>
-خلال بقية الوحدة، سنقوم بصياغة المطالبات لـ Microsoft 365 Copilot التي تشير إلى هذه الملفات.</li>
-</li>
+# تدريب - تابع باستخدام بيانات العينة مع Microsoft 365 Copilot
+
+خلال بقية الوحدة، سنقوم بصياغة المطالبات لـ Microsoft 365 Copilot التي تشير إلى هذه الملفات.
+
 - [Market Analysis Report for Mystic Spice Premium Chai Tea.docx](https://go.microsoft.com/fwlink/?linkid=2268826)</li>
 - [Contoso Chai Tea market trends 2023.xlsx](https://go.microsoft.com/fwlink/?linkid=2268822)</li>
 - [Contoso Chai Tea market trends 2023.docx](https://go.microsoft.com/fwlink/?linkid=2269122)</li>
