--- a/Instructions/Labs/M01-test/1a-sample-data-copilot-microsoft-365.html
+++ b/Instructions/Labs/M01-test/1a-sample-data-copilot-microsoft-365.html
@@ -2,43 +2,42 @@
 
 خلال بقية الوحدة، سنقوم بصياغة المطالبات لـ Microsoft 365 Copilot التي تشير إلى هذه الملفات.
 
-- [Market Analysis Report for Mystic Spice Premium Chai Tea.docx](https://go.microsoft.com/fwlink/?linkid=2268826)</li>
-- [Contoso Chai Tea market trends 2023.xlsx](https://go.microsoft.com/fwlink/?linkid=2268822)</li>
-- [Contoso Chai Tea market trends 2023.docx](https://go.microsoft.com/fwlink/?linkid=2269122)</li>
-- [Market Trend Report- Protein shake.docx](https://go.microsoft.com/fwlink/?linkid=2268827)</li>
-- [Mystic Spice Premium Chai Market Analysis Presentation.pptx](https://go.microsoft.com/fwlink/?linkid=2268768)</li>
-</li>
-**ملاحظة**: هذه هي الملفات التي سنشير إليها في جميع أنحاء الوحدة. ومع ذلك، بالنسبة لهذا النشاط العملي، سنبدأ بتحميل جميع الملفات إلى **OneDrive** للتأكد من إمكانية الوصول إليها من خلال مطالبات Copilot لاحقًا.</li>
-</li>
-## تحميل الملفات إلى OneDrive</li>
-</li>
-اتبع الخطوات أدناه لتحميل جميع الملفات المطلوبة إلى **OneDrive**:</li>
-</li>
-<li>سجّل الدخول إلى الجهاز الظاهري الذي يوفره لك موفر المستأجر باعتبارك حساب **المسؤول** المحلي باستخدام كلمة المرور `Pa55w.rd`.</li>
-<li>في شريط مهام Windows، حدد **Microsoft Edge**.</li>
-<li>في شريط العناوين، أدخِل `https://onedrive.live.com/login`.</li>
-<li>ضمن **مرحبًا بك في Microsoft 365**، حدد **تسجيل الدخول**.</li>
-<li>عند مطالبة **تسجيل الدخول**، أدخل `userx@yourtenant.onmicrosoft.com` (اسم المستخدم والمستأجر المقدم من قبل المستأجر الخاص بك) وحدّد **التالي**.</li>
-</li>
-    [![جزء مصدر لقطة الشاشة](../media/lab_resources_password.png)](../media/lab_resources_password.png#lightbox)</li>
-</li>
-<li>في شاشة **إدخال كلمة المرور**، أدخل كلمة المرور (المقدمة من قبل موفر المستأجر) لحساب المستخدم، ثم حدد **تسجيل الدخول**.</li>
-<li>إذا طُلب منك **البقاء مسجلًا الدخول**، فحدد **عدم إظهار هذا مرة أخرى**، ثم **نعم**.</li>
-<li>في **OneDrive**، في الزاوية العلوية اليسرى، حدد **+** (إضافة جديد) > **تحميل ملف**.</li>
-</li>
-    [![لقطة الشاشة الخاصة بإضافة ملف جديد](../media/add_new.png)](../media/add_new.png#lightbox)</li>
-</li>
-<li>في **مستكشف الملفات**، حدد **هذا الحاسوب** > **القرص المحلي (C:)** وافتح المجلد **ResourceFiles**.</li>
-<li>حدد جميع الملفات الموجودة داخل المجلد **ResourceFiles**، ثم حدد **فتح** لتحميلها إلى **OneDrive**.</li>
-<li>عند اكتمال التحميل، يجب أن ترى **تم تحميل 29 عنصرًا إلى ملفاتي** في الجزء السفلي الأوسط من الشاشة.</li>
-<li>اترك **Edge** مفتوحًا وانتقل إلى المهمة التالية.</li>
-</li>
-### ملفات مرجعية</li>
-</li>
-عند الرجوع إلى الملفات من Copilot، قد تجد أنه لا يمكنك العثور على بعض الملفات من الاقتراحات المقدمة لك. يحدث هذا في بعض الأحيان لأن بعض التجارب مع Copilot تشير فقط إلى الملفات من قائمة "الأكثر استخدامًا مؤخرًا" (MRU)، بينما تتيح لك تجارب أخرى تصفح OneDrive للعثور على ملفك. إن إضافتها إلى هذه القائمة أمر سهل مثل فتحها في تطبيق Microsoft 365 المناسب.  بمجرد فتحها، يجب أن تظهر في قائمة MRU.</li>
-</li>
-> [!IMPORTANT]</li>
-> سيعمل Microsoft 365 Copilot فقط مع الملفات المحفوظة في OneDrive. إذا تم تخزين الملفات محليًا على حاسوبك الشخصي، فستحتاج إلى نقلها إلى OneDrive لتنشيط Copilot.</li>
-</li>
-مع تقدمك في الوحدة، ستتاح لك الفرصة لتجربة مطالبات أخرى مقابل هذه الملفات ويتم تشجيعك على القيام بذلك لاستكشاف وتعزيز مهاراتك في المطالبات.</li>
+- [Market Analysis Report for Mystic Spice Premium Chai Tea.docx](https://go.microsoft.com/fwlink/?linkid=2268826)
+- [Contoso Chai Tea market trends 2023.xlsx](https://go.microsoft.com/fwlink/?linkid=2268822)
+- [Contoso Chai Tea market trends 2023.docx](https://go.microsoft.com/fwlink/?linkid=2269122)
+- [Market Trend Report- Protein shake.docx](https://go.microsoft.com/fwlink/?linkid=2268827)
+- [Mystic Spice Premium Chai Market Analysis Presentation.pptx](https://go.microsoft.com/fwlink/?linkid=2268768)
 
+**ملاحظة**: هذه هي الملفات التي سنشير إليها في جميع أنحاء الوحدة. ومع ذلك، بالنسبة لهذا النشاط العملي، سنبدأ بتحميل جميع الملفات إلى **OneDrive** للتأكد من إمكانية الوصول إليها من خلال مطالبات Copilot لاحقًا.
+
+## تحميل الملفات إلى OneDrive
+
+اتبع الخطوات أدناه لتحميل جميع الملفات المطلوبة إلى **OneDrive**:
+
+1. سجّل الدخول إلى الجهاز الظاهري الذي يوفره لك موفر المستأجر باعتبارك حساب **المسؤول** المحلي باستخدام كلمة المرور `Pa55w.rd`.
+2. في شريط مهام Windows، حدد **Microsoft Edge**.
+3. في شريط العناوين، أدخِل `https://onedrive.live.com/login`.
+4. ضمن **مرحبًا بك في Microsoft 365**، حدد **تسجيل الدخول**.
+5. عند مطالبة **تسجيل الدخول**، أدخل `userx@yourtenant.onmicrosoft.com` (اسم المستخدم والمستأجر المقدم من قبل المستأجر الخاص بك) وحدّد **التالي**.
+
+    [![جزء مصدر لقطة الشاشة](../media/lab_resources_password.png)](../media/lab_resources_password.png#lightbox)
+
+6. في شاشة **إدخال كلمة المرور**، أدخل كلمة المرور (المقدمة من قبل موفر المستأجر) لحساب المستخدم، ثم حدد **تسجيل الدخول**.
+7. إذا طُلب منك **البقاء مسجلًا الدخول**، فحدد **عدم إظهار هذا مرة أخرى**، ثم **نعم**.
+8. في **OneDrive**، في الزاوية العلوية اليسرى، حدد **+** (إضافة جديد) > **تحميل ملف**.
+
+    [![لقطة الشاشة الخاصة بإضافة ملف جديد](../media/add_new.png)](../media/add_new.png#lightbox)
+
+9. في **مستكشف الملفات**، حدد **هذا الحاسوب** > **القرص المحلي (C:)** وافتح المجلد **ResourceFiles**.
+10. حدد جميع الملفات الموجودة داخل المجلد **ResourceFiles**، ثم حدد **فتح** لتحميلها إلى **OneDrive**.
+11. عند اكتمال التحميل، يجب أن ترى **تم تحميل 29 عنصرًا إلى ملفاتي** في الجزء السفلي الأوسط من الشاشة.
+12. اترك **Edge** مفتوحًا وانتقل إلى المهمة التالية.
+
+### ملفات مرجعية
+
+عند الرجوع إلى الملفات من Copilot، قد تجد أنه لا يمكنك العثور على بعض الملفات من الاقتراحات المقدمة لك. يحدث هذا في بعض الأحيان لأن بعض التجارب مع Copilot تشير فقط إلى الملفات من قائمة "الأكثر استخدامًا مؤخرًا" (MRU)، بينما تتيح لك تجارب أخرى تصفح OneDrive للعثور على ملفك. إن إضافتها إلى هذه القائمة أمر سهل مثل فتحها في تطبيق Microsoft 365 المناسب.  بمجرد فتحها، يجب أن تظهر في قائمة MRU.
+
+> [!IMPORTANT]
+> سيعمل Microsoft 365 Copilot فقط مع الملفات المحفوظة في OneDrive. إذا تم تخزين الملفات محليًا على حاسوبك الشخصي، فستحتاج إلى نقلها إلى OneDrive لتنشيط Copilot.
+
+مع تقدمك في الوحدة، ستتاح لك الفرصة لتجربة مطالبات أخرى مقابل هذه الملفات ويتم تشجيعك على القيام بذلك لاستكشاف وتعزيز مهاراتك في المطالبات.
